<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">
    
    <TextView 
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/btnQuiz" />

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerInParent="true"
        android:text="@string/ujian" />
    
    <Button
        android:id="@+id/btn2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnQuiz"
        android:visibility="invisible"
        android:text="@string/traffic" />
    
    <TextView 
        android:id="@+id/txtHsl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:visibility="gone"
        android:layout_below="@+id/btn2"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="18dp"
        android:text="@string/txtmenu"
      	android:singleLine="true"
      	android:textColor="#80000000"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>