<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".TrafficMan" 
    android:background="@drawable/bg">
     	
    	<TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"            
            android:text="@string/ts"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    	
    	<TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00ff00"            
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    	
    	<TextView
            android:id="@+id/textreceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"            
            android:layout_centerInParent="true"
            android:text="@string/rb"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    	
        <TextView
            android:id="@+id/rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000ff"            
            android:layout_centerInParent="true"
            android:text="@string/rb"
            android:layout_below="@+id/textreceive"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/texttransmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"            
            android:layout_centerInParent="true"
            android:text="@string/tb"
            android:layout_below="@+id/rx"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"            
            android:layout_centerInParent="true"
            android:text="@string/tb"
            android:layout_below="@+id/texttransmit"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
      
</RelativeLayout>